# simplex

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  astinput.cpp  astinput.h  astnode.cpp  astnode.h  errors.cpp  errors.h  evaluator.cpp  evaluator.h  main.cpp  nodekind.cpp  nodekind.h  parser.cpp  parser.h  repl.cpp  stdlib.cpp  stdlib.h  stdlib.simplex  structure.cpp  structure.h  symboltable.cpp  symboltable.h
bootstrap/: .gitignore  astinput.cpp  astnode.cpp  astnode.h  errors.cpp  errors.h  evaluator.cpp  evaluator.h  main.cpp  parser.cpp  repl.h  stdlib.cpp  structure.cpp  structure.h  symboltable.h
bootstrap/test/: astnode.cpp  evaluator.cpp  macros.h  parser.cpp  stdlib.cpp  structure.cpp
fuzz/: Cargo.toml
fuzz/fuzz_targets/: evaluator.rs  parser.rs
random/: calculator.simplex  type_mismatch.simplex  wacky_list.simplex
src/: astinput.h  astinput.rs  astnode.cpp  astnode.rs  errors.rs  evaluator.rs  lib.rs  main.rs  nodekind.cpp  nodekind.h  parser.rs  stdlib.cpp  stdlib.rs  stdlib.simplex  structure.h  structure.rs  symboltable.cpp  symboltable.rs
src/test/: astnode.cpp  stdlib.cpp
test/: .gitignore  astnode.cpp  evaluator.cpp  parser.cpp  stdlib.cpp  structure.cpp
webplayground/: .gitignore  Cargo.toml  index.html
webplayground/src/: main.rs
webplayground/style/: index.scss
