[package]
name = "webplayground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplex = { path = "../" }
yew = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "HtmlTextAreaElement",
]
